devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neural-search-service
  namespace: neural-search-prod
  labels:
    app: neural-search
    ref: dev
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5000"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
spec:
  type: NodePort
  ports:
    - name: http-metrics
      port: 5000 
      targetPort: 5000
      protocol: TCP
      # nodePort: 30006
  selector:
    app: neural-search
    ref: dev
